<resources>
    <string name="app_name">mixed-drems-mobile</string>
    <string name="base_url">https://localhost:7239/api</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
</resources>